--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=h1, initial-scale=1.0" />
-		<title>goit-markup-hw-04</title>
+		<title>goit-markup-hw-03</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
 			rel="stylesheet" />
-			<link
+		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 			integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
 			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		  />
+			referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
@@ -66,6 +65,12 @@
 					<h2 class="visually-hidden">Our Features</h2>
 					<ul class="features-list list">
 						<li class="features-item">
+							<div class="features-icons">
+								<a href="" class="svg-icon"></a>
+								<svg width="64" height="64">
+									<use href="./images/features-icons.svg#icon-antenna-1"></use>
+								</svg>
+							</div>
 							<h3 class="features-suptitle">Strategy</h3>
 							<p class="features-subtitle">
 								Our goal is to identify the business problem to walk away with
@@ -73,6 +78,12 @@
 							</p>
 						</li>
 						<li class="features-item">
+							<div class="features-icons">
+								<a href="" class="svg-icon"></a>
+								<svg width="64" height="64">
+									<use href="./images/features-icons.svg#icon-clock-1"></use>
+								</svg>
+							</div>
 							<h3 class="features-suptitle">Punctuality</h3>
 							<p class="features-subtitle">
 								Bring the key message to the brand's audience for the best price
@@ -80,6 +91,12 @@
 							</p>
 						</li>
 						<li class="features-item">
+							<div class="features-icons">
+								<a href="" class="svg-icon"></a>
+								<svg width="64" height="64">
+									<use href="./images/features-icons.svg#icon-diagram-1"></use>
+								</svg>
+							</div>
 							<h3 class="features-suptitle">Diligence</h3>
 							<p class="features-subtitle">
 								Research and confirm brands that present the strongest digital
@@ -87,6 +104,13 @@
 							</p>
 						</li>
 						<li class="features-item">
+							<div class="features-icons">
+								<a href="" class="svg-icon"></a>
+								<svg width="64" height="64">
+									<use
+										href="./images/features-icons.svg#icon-astronaut-1"></use>
+								</svg>
+							</div>
 							<h3 class="features-suptitle">Technologies</h3>
 							<p class="features-subtitle">
 								Design practice focused on digital experiences. We bring forth a
@@ -97,7 +121,7 @@
 				</div>
 			</section>
 			<section class="images">
-				<div class="container images-container">
+				<div class="container">
 					<h2 class="images-title">What are we doing</h2>
 					<ul class="images-list list">
 						<li class="images-item">
@@ -137,6 +161,40 @@
 							<div class="team-information">
 								<h3 class="team-suptitle">Mark Guerrero</h3>
 								<p class="team-subtitle">Product Designer</p>
+								<ul class="team-icon-list list">
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-item">
@@ -148,6 +206,40 @@
 							<div class="team-information">
 								<h3 class="team-suptitle">Tom Ford</h3>
 								<p class="team-subtitle">Frontend Developer</p>
+								<ul class="team-icon-list list">
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-item">
@@ -159,6 +251,40 @@
 							<div class="team-information">
 								<h3 class="team-suptitle">Camila Garcia</h3>
 								<p class="team-subtitle">Marketing</p>
+								<ul class="team-icon-list list">
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-item">
@@ -170,21 +296,139 @@
 							<div class="team-information">
 								<h3 class="team-suptitle">Daniel Wilson</h3>
 								<p class="team-subtitle">UI Designer</p>
+								<ul class="team-icon-list list">
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-instagram-2"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-twitter-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-facebook-1"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="team-icon-item">
+										<a href="" class="team-soc-link link">
+											<svg class="caption-soc-icon" width="16" height="16">
+												<use
+													href="./images/team-icons.svg#icon-linkedin-1"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="customers">
+				<div class="container">
+					<h2 class="customers-header">Customers</h2>
+					<ul class="customers-icon-list list">
+						<li class="customers-icon-item">
+							<a href="" class="customers-icon-link link">
+								<svg class="customers-icon" width="104" height="56">
+									<use href="./images/customers-icons.svg#icon-Logo"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customers-icon-item">
+							<a href="" class="customers-icon-link link">
+								<svg class="customers-icon" width="104" height="56">
+									<use href="./images/customers-icons.svg#icon-Logo-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customers-icon-item">
+							<a href="" class="customers-icon-link link">
+								<svg class="customers-icon" width="104" height="56">
+									<use href="./images/customers-icons.svg#icon-Logo-2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customers-icon-item">
+							<a href="" class="customers-icon-link link">
+								<svg class="customers-icon" width="104" height="56">
+									<use href="./images/customers-icons.svg#icon-Logo-3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customers-icon-item">
+							<a href="" class="customers-icon-link link">
+								<svg class="customers-icon" width="104" height="56">
+									<use href="./images/customers-icons.svg#icon-Logo-4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="customers-icon-item">
+							<a href="" class="customers-icon-link link">
+								<svg class="customers-icon" width="104" height="56">
+									<use href="./images/customers-icons.svg#icon-Logo-5"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
 				</div>
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="container">
-				<a href="./index.html" class="footer-logo">
-					<span class="footer-logo-web">Web</span>Studio</a
-				>
-				<p class="footer-title">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
+			<div class="container footer-container">
+				<div class="footer-block-one">
+					<a href="./index.html" class="footer-logo">
+						<span class="footer-logo-web">Web</span>Studio</a
+					>
+					<p class="footer-title">
+						Increase the flow of customers and sales for your business with
+						digital marketing & growth solutions.
+					</p>
+				</div>
+				<div class="social-media">
+					<h2 class="social-media-header">Social media</h2>
+					<ul class="social-media-list list">
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-instagram-2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-twitter-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-facebook-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-linkedin-1"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
