--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=h1, initial-scale=1.0" />
-		<title>goit-markup-hw-04</title>
+		<title>goit-markup-hw-03</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -75,8 +75,6 @@
 								<button class=filter-button type="button">Marketing</button>
 							</li>
 						</ul>
-						
-						<div class="portfolio-wrap">
 							<ul class="portfolio-list list">
 								<li class="portfolio-item">
 									<img
@@ -180,18 +178,52 @@
 							</ul>
 						</div>
 					</section>
-					</div>
 				</div>
 		</main>
 		<footer class="footer">
-			<div class="container">
-				<a href="./index.html" class="footer-logo">
-					<span class="footer-logo-web">Web</span>Studio</a
-				>
-				<p class="footer-title">
-					Increase the flow of customers and sales for your business with
-					digital marketing & growth solutions.
-				</p>
+			<div class="container footer-container">
+				<div class="footer-block-one">
+					<a href="./index.html" class="footer-logo">
+						<span class="footer-logo-web">Web</span>Studio</a
+					>
+					<p class="footer-title">
+						Increase the flow of customers and sales for your business with
+						digital marketing & growth solutions.
+					</p>
+				</div>
+				<div class="social-media">
+					<h2 class="social-media-header">Social media</h2>
+					<ul class="social-media-list list">
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-instagram-2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-twitter-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-facebook-1"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-media-item">
+							<a href="" class="social-media-link link">
+								<svg class="social-media-icon" width="24" height="24">
+									<use href="./images/team-icons.svg#icon-linkedin-1"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
